--- a/pipelines/shoppingapi-pipeline.yaml
+++ b/pipelines/shoppingapi-pipeline.yaml
@@ -10,6 +10,7 @@ trigger:
     include:
       - "Shopping/Shopping.API"
       - "aks/shoppingapi.yaml"
+      - "pipelines/shoppingapi-pipeline.yaml"
 
 resources:
 - repo: self
