--- a/pipelines/shoppingclient-pipeline.yaml
+++ b/pipelines/shoppingclient-pipeline.yaml
@@ -10,6 +10,7 @@ trigger:
     include:
       - "Shopping/Shopping.Client"
       - "aks/shoppingclient.yaml"
+      - "pipelines/shoppingclient-pipeline.yaml"
 
 resources:
 - repo: self
